k8s/istio/driver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hotrod
    component: driver
  name: driver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotrod
      component: driver
  strategy: {}
  template:
    metadata:
      labels:
        app: hotrod
        component: driver
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - args:
            - driver
          image: signadot/hotrod:latest
          imagePullPolicy: Always
          name: hotrod
          ports:
            - containerPort: 8082
              name: web
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hotrod
    component: driver
  name: driver
spec:
  ports:
    - name: grpc-web
      port: 8082
      targetPort: web
  selector:
    app: hotrod
    component: driver
