k8s/istio/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hotrod
    component: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotrod
      component: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: hotrod
        component: frontend
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - args:
            - frontend
          image: signadot/hotrod-frontend:latest
          imagePullPolicy: Always
          name: hotrod
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hotrod
    component: frontend
  name: frontend
spec:
  ports:
    - name: http-web
      port: 8080
      targetPort: 8080
  selector:
    app: hotrod
    component: frontend
