k8s/istio/route.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hotrod
    component: route
  name: route
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotrod
      component: route
  strategy: {}
  template:
    metadata:
      labels:
        app: hotrod
        component: route
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - args:
            - route
          image: signadot/hotrod-route:latest
          imagePullPolicy: Always
          name: hotrod
          ports:
            - containerPort: 8083
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hotrod
    component: route
  name: route
spec:
  ports:
    - name: http-web
      port: 8083
      targetPort: 8083
  selector:
    app: hotrod
    component: route
